[project]
name = "tenable-showcase-lab"
version = "0.1.0"
description = "Educational Tenable scanning showcase with a small CLI and docs."
authors = [{name="RepoBuilder", email="devnull@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2"
]

[project.scripts]
tenable-showcase = "tenable_showcase.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q --cov=tenable_showcase --cov-report=term-missing"
testpaths = ["tests"]
